syntax = "proto2";

package dev.vhonta.content.tgbot.proto;

import "zio-temporal.proto";
import "content_feed.proto";
import "content_integrations.proto";
import "content_feed_recommendation.proto";

enum TelegramParseMode {
  Markdown2 = 1;
  Html = 2;
}

message InlineKeyboardButton {
  required string text = 1;
  optional string url = 2;
  optional string callbackData = 3;
}

message InlineKeyboardButtonGroup {
  repeated InlineKeyboardButton buttons = 1;
}

message InlineKeyboardMarkup {
  repeated InlineKeyboardButtonGroup groups = 1;
}

message NotifySubscriberParams {
  required zio.temporal.protobuf.UUID subscriber = 1;
  required string message = 2;
  optional TelegramParseMode parseMode = 3;
  optional InlineKeyboardMarkup replyMarkup = 4;
}

message PretendTypingParams {
  required zio.temporal.protobuf.UUID subscriber = 1;
}

message AddTopicParams {
  required zio.temporal.protobuf.UUID subscriber = 1;
}

message SpecifyTopic {
  required string value = 1;
}

message SpecifyLanguage {
  required dev.vhonta.content.proto.ContentLanguage value = 1;
}

enum AddTopicStep {
  WaitingForTopic = 1;
  WaitingForLanguage = 2;
  StoringTopic = 3;
}
message CurrentAddTopicStep {
  required AddTopicStep value = 1;
}

message CreateTopicParams {
  required zio.temporal.protobuf.UUID subscriber = 1;
  required string topic = 2;
  required dev.vhonta.content.proto.ContentLanguage lang = 3;
}

message ListTopicsParams {
  required zio.temporal.protobuf.UUID subscriber = 1;
}

message ListTopicsResult {
  repeated dev.vhonta.content.proto.ContentFeedTopic topics = 1;
}

message ListAllSubscribersParams {
  required int64 now = 1;
  required int64 deltaMinutes = 2;
}

message ListAllSubscribersResult {
  repeated dev.vhonta.content.proto.SubscriberWithSettings values = 1;
}

message ListRecommendationsParams {
  required dev.vhonta.content.proto.SubscriberWithSettings subscriberWithSettings = 1;
  required int64 date = 2;
}

message ListRecommendationsResult {
  repeated dev.vhonta.content.proto.ContentFeedRecommendationView results = 1;
}

message PushRecommendationsParams {
  required dev.vhonta.content.proto.SubscriberWithSettings subscriberWithSettings = 1;
  required int64 date = 2;
}