syntax = "proto2";

package dev.vhonta.news.puller.proto;

import "zio-temporal.proto";
import "news_api.proto";
import "news_feed.proto";
import "news_integrations.proto";

message ListTopics {
  repeated zio.temporal.protobuf.UUID readers = 1;
}

message ListIntegrations {
  required dev.vhonta.news.proto.NewsFeedIntegrationType  integrationType = 1;
}

message NewsPullerParameters {
  required string apiKey = 1;
  required zio.temporal.protobuf.UUID topicId = 2;
  required string topic = 3;
  required dev.vhonta.news.proto.NewsTopicLanguage language = 4;
  optional int64 from = 5;
  required int64 to = 6;
}

message PullingResult {
  required int64 processed = 1;
}

message NewsPullerParametersList {
  repeated NewsPullerParameters params = 1;
}

message NewsPullerActivityParameters {
  required string apiKey = 1;
  required string topic = 2;
  required dev.vhonta.news.proto.NewsTopicLanguage language = 3;
  optional int64 from = 4;
  required int64 to = 5;
  required int32 page = 6;
}

message ResetPuller {
  required zio.temporal.protobuf.UUID topicId = 1;
}

message PullerTopicState {
  required zio.temporal.protobuf.UUID topicId = 1;
  required int64 lastProcessedAt = 2;
}

message InitialPullerState {
  repeated PullerTopicState states = 1;
}